--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.0.0
+alembic==1.7.6
 astunparse==1.6.3
 cachetools==5.0.0
 certifi==2021.10.8
@@ -6,6 +7,7 @@ charset-normalizer==2.0.11
 click==8.0.3
 cycler==0.11.0
 Flask==2.0.2
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 flatbuffers==2.0
 fonttools==4.29.1
@@ -25,6 +27,7 @@ keras==2.8.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
 libclang==13.0.0
+Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.0.1
 matplotlib==3.5.1
