Create seperate endpoint for skin

--- a/.env.template.txt
+++ b/.env.template.txt
@@ -1,4 +1,4 @@
 PORT="some port"
-MODEL_ID="the file ID of the model on google drive"
+SKIN_MODEL_ID="the file ID of the skin model on google drive"
 SQLALCHEMY_DATABASE_URI="The URI of the database. I used PostgreSQL"
 ACCESS_SECRET="A secret to create access jwt tokens"
