use google storage

--- a/.env.template.txt
+++ b/.env.template.txt
@@ -3,3 +3,4 @@ SKIN_MODEL_ID="the file ID of the skin model on google drive"
 LUNG_MODEL_ID="the file ID of the lung model on google drive"
 SQLALCHEMY_DATABASE_URI="The URI of the database. I used PostgreSQL"
 ACCESS_SECRET="A secret to create access jwt tokens"
+CLOUD_STORAGE_BUCKET="google cloud storage bucket for storing images"
